--- a/apps/poisson1.yaml
+++ b/apps/poisson1.yaml
@@ -8,7 +8,15 @@ gp:
   early_stopping: {'enabled': True, 'max_overfit': 3}
   parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
   final_training: False
+  mutate:
+    fun: gp.mutUniform
+    # fun: gp.mutShrink
+    kargs: "{'expr': GPproblem.toolbox.expr_mut, 'pset': pset}" # string is important
+    # kargs: "{}"
+
+plot:
+  plot_best: False
 
 mp:
-  n_splits: 20
+  n_splits: 10
   n_jobs: 4
