--- a/apps/poisson1.yaml
+++ b/apps/poisson1.yaml
@@ -1,16 +1,17 @@
 # template for Poisson parameters file
 gp:
-  NINDIVIDUALS: 10
-  NGEN: 4
+  NINDIVIDUALS: 200
+  NGEN: 50
   CXPB: 0.5
   MUTPB: 0.2
-  frac_elitist: 0.01
+  frac_elitist: 0.02
   early_stopping: {'enabled': True, 'max_overfit': 3}
-  parsimony_pressure: {'enabled': True, 'fitness_first': True, 'parsimony_size': 1.3}
+  parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
   final_training: False
   mutate:
     fun: gp.mutUniform
     # fun: gp.mutNodeReplacement
+    # fun: gp.mutInsert
     # fun: gp.mutShrink
     kargs: "{'expr': GPproblem.toolbox.expr_mut, 'pset': pset}" # string is important
     # kargs: "{'pset': pset}"
