--- a/apps/poisson1.yaml
+++ b/apps/poisson1.yaml
@@ -1,13 +1,16 @@
 # template for Poisson parameters file
 gp:
-  NINDIVIDUALS: 10
-  NGEN: 10
+  NINDIVIDUALS: 200
+  NGEN: 50
   CXPB: 0.5
   MUTPB: 0.2
   frac_elitist: 0.02
   early_stopping: {'enabled': True, 'max_overfit': 3}
   parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
   final_training: False
+  select:
+    tournsize: 2
+    stochastic_tournament: {'enabled': False, 'prob': [0.7, 0.3]}
   mutate:
     fun: gp.mutUniform
     # fun: gp.mutNodeReplacement
@@ -18,11 +21,11 @@ gp:
     # kargs: "{}"
     expr_mut: gp.genHalfAndHalf
     # expr_mut: gp.genFull
-    expr_mut_kargs: "{'min_': 1, 'max_': 3}"
+    expr_mut_kargs: "{'min_': 0, 'max_': 3}"
 
 plot:
   plot_best: False
 
 mp:
-  n_splits: 2
-  n_jobs: 2
+  n_splits: 20
+  n_jobs: 4
