--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = alpine
-description = Add a short description here!
+description = Geometric symbolic learning of physical models
 author = Alessandro Lucantonio
 author_email = alessandro.lucantonio@gmail.com
 license = MIT
@@ -49,7 +49,12 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    deap @ git+https://github.com/alucantonio/deap.git
+    dctkit @ git+https://github.com/alucantonio/dctkit.git
+    networkx
+    mpire
+    scipy
+    yaml
 
 [options.packages.find]
 where = src
