--- a/apps/poisson1.yaml
+++ b/apps/poisson1.yaml
@@ -1,7 +1,7 @@
 # template for Poisson parameters file
 gp:
   NINDIVIDUALS: 500
-  NGEN: 10
+  NGEN: 100
   CXPB: 0.5
   MUTPB: 0.2
   frac_elitist: 0.002
@@ -9,7 +9,7 @@ gp:
   max_: 5
   early_stopping: {'enabled': True, 'max_overfit': 10}
   parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
-  penalty: {'method': "terminal", 'reg_param': 0.1}
+  penalty: {'method': "primitive", 'reg_param': 0.1}
   select:
     tournsize: 2
     stochastic_tournament: {'enabled': False, 'prob': [0.7, 0.3]}
