Update pop generation. Script_figures still WIP.

--- a/apps/poisson1.yaml
+++ b/apps/poisson1.yaml
@@ -1,15 +1,15 @@
 # template for Poisson parameters file
 gp:
-  NINDIVIDUALS: 1000
-  NGEN: 10
+  NINDIVIDUALS: 500
+  NGEN: 20
   CXPB: 0.5
-  MUTPB: 0.2
+  MUTPB: 0.1
   frac_elitist: 0.002
-  min_: 1
+  min_: 3
   max_: 5
   early_stopping: {'enabled': True, 'max_overfit': 10}
   parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
-  penalty: {'method': "primitive", 'reg_param': 0.1}
+  penalty: {'method': "length", 'reg_param': 0.1}
   select:
     tournsize: 2
     stochastic_tournament: {'enabled': False, 'prob': [0.7, 0.3]}
@@ -23,12 +23,12 @@ gp:
     # kargs: "{}"
     expr_mut: gp.genHalfAndHalf
     # expr_mut: gp.genFull
-    expr_mut_kargs: "{'min_': 0, 'max_': 4}"
+    expr_mut_kargs: "{'min_': 0, 'max_': 2}"
   crossover:
-    fun: gp.cxOnePoint
-    kargs: "{}"
-    # fun: gp.cxOnePointLeafBiased
-    # kargs: "{term_pb = 0.1}"
+    #fun: gp.cxOnePoint
+    #kargs: "{}"
+    fun: gp.cxOnePointLeafBiased
+    kargs: "{'termpb' : 0.1}"
 
 plot:
   plot_best: True
