--- a/apps/poisson1.yaml
+++ b/apps/poisson1.yaml
@@ -1,7 +1,7 @@
 # template for Poisson parameters file
 gp:
-  NINDIVIDUALS: 100
-  NGEN: 10
+  NINDIVIDUALS: 10
+  NGEN: 20
   CXPB: 0
   MUTPB: 1.0
   frac_elitist: 0
@@ -25,10 +25,10 @@ gp:
     # expr_mut: gp.genFull
     expr_mut_kargs: "{'min_': 1, 'max_': 3}"
   crossover:
-    #fun: gp.cxOnePoint
-    #kargs: "{}"
-    fun: gp.cxOnePointLeafBiased
-    kargs: "{'termpb' : 0.1}"
+    fun: gp.cxOnePoint
+    kargs: "{}"
+    #fun: gp.cxOnePointLeafBiased
+    #kargs: "{'termpb' : 0.1}"
 
 plot:
   plot_best: True
