--- a/apps/elastica_template.yaml
+++ b/apps/elastica_template.yaml
@@ -8,20 +8,18 @@ gp:
   min_: 1
   max_: 4
   overlapping_generation: True
-  early_stopping: {'enabled': True, 'max_overfit': 10}
-  parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
-  penalty: {'method': "length", 'reg_param': 0.1}
+  early_stopping: { "enabled": True, "max_overfit": 10 }
+  parsimony_pressure:
+    { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
+  penalty: { "method": "length", "reg_param": 0.1 }
   select:
     tournsize: 2
-    stochastic_tournament: {'enabled': False, 'prob': [0.7, 0.3]}
+    stochastic_tournament: { "enabled": False, "prob": [0.7, 0.3] }
   mutate:
-    fun: gp.mutUniform
-    # fun: gp.mutNodeReplacement
-    # fun: gp.mutInsert
-    # fun: gp.mutShrink
-    kargs: "{'expr': toolbox.expr_mut, 'pset': pset}" # string is important
-    # kargs: "{'pset': pset}"
-    # kargs: "{}"
+    # fun: gp.mutUniform
+    fun: gps.mixedMutate
+    # kargs: "{'expr': toolbox.expr_mut, 'pset': pset}" # string is important
+    kargs: "{'expr': toolbox.expr_mut, 'pset': pset, 'prob': [0.4, 0.3, 0.3]}" # string is important
     expr_mut: gp.genHalfAndHalf
     # expr_mut: gp.genFull
     expr_mut_kargs: "{'min_': 1, 'max_': 3}"
