--- a/apps/elastica_template.yaml
+++ b/apps/elastica_template.yaml
@@ -1,14 +1,14 @@
 # template for Poisson parameters file
 gp:
-  NINDIVIDUALS: 3
-  NGEN: 5
+  NINDIVIDUALS: 1000
+  NGEN: 100
   CXPB: 0
   MUTPB: 1.0
   frac_elitist: 0
   min_: 1
-  max_: 4
+  max_: 3
   overlapping_generation: True
-  early_stopping: { "enabled": True, "max_overfit": 10 }
+  early_stopping: { "enabled": True, "max_overfit": 4}
   parsimony_pressure:
     { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
   penalty: { "method": "length", "reg_param": 0.1 }
@@ -17,9 +17,9 @@ gp:
     stochastic_tournament: { "enabled": False, "prob": [0.7, 0.3] }
   mutate:
     # fun: gp.mutUniform
-    fun: gps.mixedMutate
+    fun: mixedMutate
     # kargs: "{'expr': toolbox.expr_mut, 'pset': pset}" # string is important
-    kargs: "{'expr': toolbox.expr_mut, 'pset': pset, 'prob': [0.4, 0.3, 0.3]}" # string is important
+    kargs: "{'expr': toolbox.expr_mut, 'pset': pset, 'prob': [0.8, 0.1, 0.1]}" # string is important
     expr_mut: gp.genHalfAndHalf
     # expr_mut: gp.genFull
     expr_mut_kargs: "{'min_': 1, 'max_': 3}"
