Implemented model assessment using all data.

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,14 +48,14 @@ package_dir =
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
-    deap @ git+https://github.com/alucantonio/deap.git
-    dctkit @ git+https://github.com/alucantonio/dctkit.git
-    networkx
-    mpire
-    scipy
-    yaml
-    pygmo
+    # importlib-metadata; python_version<"3.8"
+    # deap @ git+https://github.com/alucantonio/deap.git
+    # dctkit @ git+https://github.com/alucantonio/dctkit.git
+    # networkx
+    # mpire
+    # scipy
+    # yaml
+    # pygmo
 
 [options.packages.find]
 where = src
