--- a/apps/poisson_template.yaml
+++ b/apps/poisson_template.yaml
@@ -8,12 +8,13 @@ gp:
   min_: 1
   max_: 3
   overlapping_generation: True
-  early_stopping: {'enabled': True, 'max_overfit': 10}
-  parsimony_pressure: {'enabled': False, 'fitness_first': True, 'parsimony_size': 1.5}
-  penalty: {'method': "length", 'reg_param': 0.01}
+  early_stopping: { "enabled": True, "max_overfit": 10 }
+  parsimony_pressure:
+    { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
+  penalty: { "method": "length", "reg_param": 0.01 }
   select:
     tournsize: 2
-    stochastic_tournament: {'enabled': False, 'prob': [0.7, 0.3]}
+    stochastic_tournament: { "enabled": False, "prob": [0.7, 0.3] }
   mutate:
     fun: gp.mutUniform
     # fun: gp.mutNodeReplacement
@@ -36,6 +37,4 @@ plot:
   plot_best_genealogy: False
 
 mp:
-  n_splits: 2
   n_jobs: 2
-  start_method: "fork"
