--- a/apps/poisson_template.yaml
+++ b/apps/poisson_template.yaml
@@ -1,26 +1,26 @@
 # template for Poisson parameters file
 gp:
-  NINDIVIDUALS: 10
-  NGEN: 5
-  CXPB: 0
-  MUTPB: 1.0
+  NINDIVIDUALS: 2000
+  NGEN: 100
+  CXPB: 0.2
+  MUTPB: 0.8
   frac_elitist: 0
-  min_: 1
-  max_: 3
+  min_: 2
+  max_: 5
   overlapping_generation: True
   early_stopping: { "enabled": True, "max_overfit": 10 }
   parsimony_pressure:
     { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
-  penalty: { "method": "length", "reg_param": 0.01 }
+  penalty: { "method": "length", "reg_param": 0. }
   select:
     tournsize: 2
     stochastic_tournament: { "enabled": False, "prob": [0.7, 0.3] }
   mutate:
-    fun: gp.mutUniform
+    fun: gp.mixedMutate
     # fun: gp.mutNodeReplacement
     # fun: gp.mutInsert
     # fun: gp.mutShrink
-    kargs: "{'expr': toolbox.expr_mut, 'pset': pset}" # string is important
+    kargs: "{'expr': toolbox.expr_mut, 'pset': pset, 'prob': [0.7, 0.2, 0.1]}" # string is important
     # kargs: "{'pset': pset}"
     # kargs: "{}"
     expr_mut: gp.genHalfAndHalf
