--- a/apps/elastica_template.yaml
+++ b/apps/elastica_template.yaml
@@ -32,6 +32,86 @@ gp:
     kargs: "{}"
     #fun: gp.cxOnePointLeafBiased
     #kargs: "{'termpb' : 0.1}"
+  primitives:
+    [
+      "Add",
+      "Sub",
+      "MulF",
+      "Div",
+      "SinF",
+      "ArcsinF",
+      "CosF",
+      "ArccosF",
+      "ExpF",
+      "LogF",
+      "SqrtF",
+      "SquareF",
+      "InvF",
+      "AddP0",
+      "AddP1",
+      "AddD0",
+      "AddD1",
+      "SubP0",
+      "SubP1",
+      "SubD0",
+      "SubD1",
+      "dP0",
+      "dD0",
+      "delP1",
+      "delD1",
+      "St0d1",
+      "St1d1",
+      "InvSt0d1",
+      "InvSt1d1",
+      "MulP0",
+      "MulP1",
+      "MulD0",
+      "MulD1",
+      "InvMulP0",
+      "InvMulP1",
+      "InvMulD0",
+      "InvMulD1",
+      "CochMulP0",
+      "CochMulP1",
+      "CochMulD0",
+      "CochMulD1",
+      "InnP0",
+      "InnP1",
+      "InnD0",
+      "InnD1",
+      "SinP0",
+      "SinP1",
+      "SinD0",
+      "SinD1",
+      "ArcsinP0",
+      "ArcsinP1",
+      "ArcsinD0",
+      "ArcsinD1",
+      "CosP0",
+      "CosP1",
+      "CosD0",
+      "CosD1",
+      "ArccosP0",
+      "ArccosP1",
+      "ArccosD0",
+      "ArccosD1",
+      "ExpP0",
+      "ExpP1",
+      "ExpD0",
+      "ExpD1",
+      "LogP0",
+      "LogP1",
+      "LogD0",
+      "LogD1",
+      "SqrtP0",
+      "SqrtP1",
+      "SqrtD0",
+      "SqrtD1",
+      "SquareP0",
+      "SquareP1",
+      "SquareD0",
+      "SquareD1",
+    ]
 
 plot:
   plot_best: False
