--- a/apps/poisson_template.yaml
+++ b/apps/poisson_template.yaml
@@ -31,6 +31,121 @@ gp:
     kargs: "{}"
     #fun: gp.cxOnePointLeafBiased
     #kargs: "{'termpb' : 0.1}"
+  primitives:
+    [
+      "Add",
+      "Sub",
+      "MulF",
+      "Div",
+      "SinF",
+      "ArcsinF",
+      "CosF",
+      "ArccosF",
+      "ExpF",
+      "LogF",
+      "SqrtF",
+      "SquareF",
+      "InvF",
+      "AddP0",
+      "AddP1",
+      "AddP2",
+      "AddD0",
+      "AddD1",
+      "AddD2",
+      "SubP0",
+      "SubP1",
+      "SubP2",
+      "SubD0",
+      "SubD1",
+      "SubD2",
+      "dP0",
+      "dP1",
+      "dD0",
+      "dD1",
+      "delP1",
+      "delP2",
+      "delD1",
+      "delD2",
+      "LapP0",
+      "St0d2",
+      "St1d2",
+      "St2d2",
+      "InvSt0d2",
+      "InvSt1d2",
+      "InvSt2d2",
+      "MulP0",
+      "MulP1",
+      "MulP2",
+      "MulD0",
+      "MulD1",
+      "MulD2",
+      "InvMulP0",
+      "InvMulP1",
+      "InvMulP2",
+      "InvMulD0",
+      "InvMulD1",
+      "InvMulD2",
+      "CochMulP0",
+      "CochMulP1",
+      "CochMulP2",
+      "CochMulD0",
+      "CochMulD1",
+      "CochMulD2",
+      "InnP0",
+      "InnP1",
+      "InnP2",
+      "InnD0",
+      "InnD1",
+      "InnD2",
+      "SinP0",
+      "SinP1",
+      "SinP2",
+      "SinD0",
+      "SinD1",
+      "SinD2",
+      "ArcsinP0",
+      "ArcsinP1",
+      "ArcsinP2",
+      "ArcsinD0",
+      "ArcsinD1",
+      "ArcsinD2",
+      "CosP0",
+      "CosP1",
+      "CosP2",
+      "CosD0",
+      "CosD1",
+      "CosD2",
+      "ArccosP0",
+      "ArccosP1",
+      "ArccosP2",
+      "ArccosD0",
+      "ArccosD1",
+      "ArccosD2",
+      "ExpP0",
+      "ExpP1",
+      "ExpP2",
+      "ExpD0",
+      "ExpD1",
+      "ExpD2",
+      "LogP0",
+      "LogP1",
+      "LogP2",
+      "LogD0",
+      "LogD1",
+      "LogD2",
+      "SqrtP0",
+      "SqrtP1",
+      "SqrtP2",
+      "SqrtD0",
+      "SqrtD1",
+      "SqrtD2",
+      "SquareP0",
+      "SquareP1",
+      "SquareP2",
+      "SquareD0",
+      "SquareD1",
+      "SquareD2",
+    ]
 
 plot:
   plot_best: False
