Selection routine moved to DEAP and changed some environment settings.

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,11 +13,17 @@ sphinx:
 #  configuration: mkdocs.yml
 
 # Optionally build your docs in additional formats such as PDF
-formats:
-  - pdf
+# formats:
+#   - pdf
+
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "mambaforge-4.10"
+
+conda:
+  environment: docs/environment.yml
 
 python:
-  version: 3.8
   install:
-    - requirements: docs/requirements.txt
-    - {path: ., method: pip}
+    - { path: ., method: pip }
