--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,12 @@
 minversion = 3.24
 envlist = default
 isolated_build = False
+requires = tox-conda
 
 
 [testenv]
 description = Invoke pytest to run automated tests
+conda_env=environment.yaml
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
