Fixed dependencies and template files.

--- a/apps/poisson_template.yaml
+++ b/apps/poisson_template.yaml
@@ -20,7 +20,7 @@ gp:
     # fun: gp.mutNodeReplacement
     # fun: gp.mutInsert
     # fun: gp.mutShrink
-    kargs: "{'expr': toolbox.expr_mut, 'pset': pset, 'prob': [0.7, 0.2, 0.1]}" # string is important
+    kargs: "{'expr': toolbox.expr_mut, 'pset': self.pset, 'prob': [0.7, 0.2, 0.1]}" # string is important
     # kargs: "{'pset': pset}"
     # kargs: "{}"
     expr_mut: gp.genHalfAndHalf
