--- a/apps/linear_elasticity_template.yaml
+++ b/apps/linear_elasticity_template.yaml
@@ -1,8 +1,8 @@
 gp:
-  NINDIVIDUALS: 1
-  NGEN: 1
-  CXPB: 0.
-  MUTPB: 0.
+  NINDIVIDUALS: 10
+  NGEN: 10
+  CXPB: 0.2
+  MUTPB: 0.8
   frac_elitist: 0
   min_: 2
   max_: 5
@@ -44,12 +44,12 @@ gp:
   #  'tr'
   #]
   primitives: []
-  primitives_ADF: [
-    'Add',
-    'Sub',
-    'tran',
-    'MF'
-]
+  #primitives_ADF: [
+  #  'Add',
+  #  'Sub',
+  #  'tran',
+  #  'MF'
+  # ]
   residual_formulation: False
 
 plot:
