Added pure shear data and sym primitives.

--- a/apps/linear_elasticity_template.yaml
+++ b/apps/linear_elasticity_template.yaml
@@ -44,6 +44,7 @@ gp:
     {"name": "MF", "dimension": [0,1,2], "rank": ["T"]},
     {"name": "Mv", "dimension": [0,1,2], "rank": ["VT"]},
     {"name": "tran", "dimension": [0,1,2], "rank": ["T"]},
+    {"name": "sym", "dimension": [0,1,2], "rank": ["T"]},
     {"name": "St", "dimension": [0,1,2], "rank": ["T"]},
     {"name": "Inn", "dimension": [0,1,2], "rank": ["T"]}
   ]
