--- a/apps/linear_elasticity_template.yaml
+++ b/apps/linear_elasticity_template.yaml
@@ -36,8 +36,12 @@ gp:
     {"name": "SubF", "dimension": tuple(), "rank": tuple()},
     {"name": "MulF", "dimension": tuple(), "rank": tuple()},
     {"name": "Div", "dimension": tuple(), "rank": tuple()},
+    {"name": "SquareF", "dimension": tuple(), "rank": tuple()},
+    {"name": "SqrtF", "dimension": tuple(), "rank": tuple()},
     {"name": "AddC", "dimension": [0,1,2], "rank": ["V", "T"]},
     {"name": "SubC", "dimension": [0,1,2], "rank": ["V", "T"]},
+    {"name": "Square", "dimension": [0,1,2], "rank": ["V", "T"]},
+    {"name": "Sqrt", "dimension": [0,1,2], "rank": ["V", "T"]},
     {"name": "tr", "dimension": [0,1,2], "rank": ["T"]},
     {"name": "MF", "dimension": [0,1,2], "rank": ["T"]},
     {"name": "Mv", "dimension": [0,1,2], "rank": ["VT"]},
