--- a/apps/elastica_template.yaml
+++ b/apps/elastica_template.yaml
@@ -1,6 +1,6 @@
 gp:
-  NINDIVIDUALS: 2000
-  NGEN: 100
+  NINDIVIDUALS: 10
+  NGEN: 1
   CXPB: 0.2
   MUTPB: 0.8
   frac_elitist: 0
@@ -31,86 +31,39 @@ gp:
     kargs: "{}"
     #fun: gp.cxOnePointLeafBiased
     #kargs: "{'termpb' : 0.1}"
-  primitives:
-    [
-      "Add",
-      "Sub",
-      "MulF",
-      "Div",
-      "SinF",
-      "ArcsinF",
-      "CosF",
-      "ArccosF",
-      "ExpF",
-      "LogF",
-      "SqrtF",
-      "SquareF",
-      "InvF",
-      "AddP0",
-      "AddP1",
-      "AddD0",
-      "AddD1",
-      "SubP0",
-      "SubP1",
-      "SubD0",
-      "SubD1",
-      "dP0",
-      "dD0",
-      "delP1",
-      "delD1",
-      "St0d1",
-      "St1d1",
-      "InvSt0d1",
-      "InvSt1d1",
-      "MulP0",
-      "MulP1",
-      "MulD0",
-      "MulD1",
-      "InvMulP0",
-      "InvMulP1",
-      "InvMulD0",
-      "InvMulD1",
-      "CochMulP0",
-      "CochMulP1",
-      "CochMulD0",
-      "CochMulD1",
-      "InnP0",
-      "InnP1",
-      "InnD0",
-      "InnD1",
-      "SinP0",
-      "SinP1",
-      "SinD0",
-      "SinD1",
-      "ArcsinP0",
-      "ArcsinP1",
-      "ArcsinD0",
-      "ArcsinD1",
-      "CosP0",
-      "CosP1",
-      "CosD0",
-      "CosD1",
-      "ArccosP0",
-      "ArccosP1",
-      "ArccosD0",
-      "ArccosD1",
-      "ExpP0",
-      "ExpP1",
-      "ExpD0",
-      "ExpD1",
-      "LogP0",
-      "LogP1",
-      "LogD0",
-      "LogD1",
-      "SqrtP0",
-      "SqrtP1",
-      "SqrtD0",
-      "SqrtD1",
-      "SquareP0",
-      "SquareP1",
-      "SquareD0",
-      "SquareD1",
-    ]
+  
+  primitives: [
+    {"name": "AddF", "dimension": tuple(), "rank": tuple()},
+    {"name": "SubF", "dimension": tuple(), "rank": tuple()},
+    {"name": "MulF", "dimension": tuple(), "rank": tuple()},
+    {"name": "Div", "dimension": tuple(), "rank": tuple()},
+    {"name": "SquareF", "dimension": tuple(), "rank": tuple()},
+    {"name": "SqrtF", "dimension": tuple(), "rank": tuple()},
+    {"name": "SinF", "dimension": tuple(), "rank": tuple()},
+    {"name": "ArcsinF", "dimension": tuple(), "rank": tuple()},
+    {"name": "CosF", "dimension": tuple(), "rank": tuple()},
+    {"name": "ArccosF", "dimension": tuple(), "rank": tuple()},
+    {"name": "ExpF", "dimension": tuple(), "rank": tuple()},
+    {"name": "LogF", "dimension": tuple(), "rank": tuple()},
+    {"name": "InvF", "dimension": tuple(), "rank": tuple()},
+    {"name": "AddC", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "SubC", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "cob", "dimension": ["0"], "rank": ["SC"]},
+    {"name": "del", "dimension": ["1"], "rank": ["SC"]},
+    {"name": "St1", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Square", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Sqrt", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "MF", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "InvM", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "CMul", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Inn", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Sin", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "ArcSin", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Cos", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Arccos", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Exp", "dimension": ["0","1"], "rank": ["SC"]},
+    {"name": "Log", "dimension": ["0","1"], "rank": ["SC"]}
+  ]
   residual_formulation: False
 
 plot:
