Added main documentation in primitives.py

--- a/apps/elastica_template.yaml
+++ b/apps/elastica_template.yaml
@@ -32,19 +32,19 @@ gp:
     #fun: gp.cxOnePointLeafBiased
     #kargs: "{'termpb' : 0.1}"
   primitives: [
-    {"name": "AddF", "dimension": tuple(), "rank": tuple()},
-    {"name": "SubF", "dimension": tuple(), "rank": tuple()},
-    {"name": "MulF", "dimension": tuple(), "rank": tuple()},
-    {"name": "Div", "dimension": tuple(), "rank": tuple()},
-    {"name": "SquareF", "dimension": tuple(), "rank": tuple()},
-    {"name": "SqrtF", "dimension": tuple(), "rank": tuple()},
-    {"name": "SinF", "dimension": tuple(), "rank": tuple()},
-    {"name": "ArcsinF", "dimension": tuple(), "rank": tuple()},
-    {"name": "CosF", "dimension": tuple(), "rank": tuple()},
-    {"name": "ArccosF", "dimension": tuple(), "rank": tuple()},
-    {"name": "ExpF", "dimension": tuple(), "rank": tuple()},
-    {"name": "LogF", "dimension": tuple(), "rank": tuple()},
-    {"name": "InvF", "dimension": tuple(), "rank": tuple()},
+    {"name": "AddF", "dimension": None, "rank": None},
+    {"name": "SubF", "dimension": None, "rank": None},
+    {"name": "MulF", "dimension": None, "rank": None},
+    {"name": "Div", "dimension": None, "rank": None},
+    {"name": "SquareF", "dimension": None, "rank": None},
+    {"name": "SqrtF", "dimension": None, "rank": None},
+    {"name": "SinF", "dimension": None, "rank": None},
+    {"name": "ArcsinF", "dimension": None, "rank": None},
+    {"name": "CosF", "dimension": None, "rank": None},
+    {"name": "ArccosF", "dimension": None, "rank": None},
+    {"name": "ExpF", "dimension": None, "rank": None},
+    {"name": "LogF", "dimension": None, "rank": None},
+    {"name": "InvF", "dimension": None, "rank": None},
     {"name": "AddC", "dimension": ["0","1"], "rank": ["SC"]},
     {"name": "SubC", "dimension": ["0","1"], "rank": ["SC"]},
     {"name": "cob", "dimension": ["0"], "rank": ["SC"]},
