--- a/apps/linear_elasticity_template.yaml
+++ b/apps/linear_elasticity_template.yaml
@@ -1,8 +1,8 @@
 gp:
-  NINDIVIDUALS: 10
-  NGEN: 10
-  CXPB: 0.2
-  MUTPB: 0.8
+  NINDIVIDUALS: 1
+  NGEN: 1
+  CXPB: 0.
+  MUTPB: 0.
   frac_elitist: 0
   min_: 2
   max_: 5
@@ -32,12 +32,12 @@ gp:
     #fun: gp.cxOnePointLeafBiased
     #kargs: "{'termpb' : 0.1}"
   primitives: [
-    {"name": "AddF", "dimension": tuple(), "rank": tuple()},
-    {"name": "SubF", "dimension": tuple(), "rank": tuple()},
-    {"name": "MulF", "dimension": tuple(), "rank": tuple()},
-    {"name": "Div", "dimension": tuple(), "rank": tuple()},
-    {"name": "SquareF", "dimension": tuple(), "rank": tuple()},
-    {"name": "SqrtF", "dimension": tuple(), "rank": tuple()},
+    {"name": "AddF", "dimension": None, "rank": None},
+    {"name": "SubF", "dimension": None, "rank": None},
+    {"name": "MulF", "dimension": None, "rank": None},
+    {"name": "Div", "dimension": None, "rank": None},
+    {"name": "SquareF", "dimension": None, "rank": None},
+    {"name": "SqrtF", "dimension": None, "rank": None},
     {"name": "AddC", "dimension": ["0","1","2"], "rank": ["V", "T"]},
     {"name": "SubC", "dimension": ["0","1","2"], "rank": ["V", "T"]},
     {"name": "Square", "dimension": ["0","1","2"], "rank": ["V", "T"]},
