--- a/apps/elastica_template.yaml
+++ b/apps/elastica_template.yaml
@@ -1,6 +1,7 @@
+# template for Elastica parameters file
 gp:
-  NINDIVIDUALS: 10
-  NGEN: 1
+  NINDIVIDUALS: 2000
+  NGEN: 100
   CXPB: 0.2
   MUTPB: 0.8
   frac_elitist: 0
