--- a/apps/burgers_template.yaml
+++ b/apps/burgers_template.yaml
@@ -1,7 +1,7 @@
 # template for Burgers parameters file
 gp:
-  NINDIVIDUALS: 10
-  NGEN: 10
+  NINDIVIDUALS: 3
+  NGEN: 1
   CXPB: 0.2
   MUTPB: 0.8
   frac_elitist: 0
@@ -56,7 +56,7 @@ gp:
     {"name": "MF", "dimension": ["0","1"], "rank": ["SC"]},
     {"name": "InvM", "dimension": ["0","1"], "rank": ["SC"]},
     {"name": "CMul", "dimension": ["0","1"], "rank": ["SC"]},
-    #{"name": "flat_up", "dimension": ["0"], "rank": ["SC"]},
+    # {"name": "flat_up", "dimension": ["0"], "rank": ["SC"]},
     #{"name": "flat_par", "dimension": ["0"], "rank": ["SC"]},
     {"name": "Inn", "dimension": ["0","1"], "rank": ["SC"]},
     #{"name": "inter_up", "dimension": None, "rank": None},
@@ -77,7 +77,8 @@ gp:
     {"name": "CMul", "dimension": ["0","1"], "rank": ["SC"]},
     {"name": "flat_par", "dimension": ["0"], "rank": ["SC"]},
     {"name": "inter_up", "dimension": None, "rank": None},
-    {"name": "int_up", "dimension": None, "rank": None}
+    {"name": "int_up", "dimension": None, "rank": None},
+    {"name": "flat_up", "dimension": ["0"], "rank": ["SC"]}
     ]
   residual_formulation: True
 
