Implemented autotune stgp_burgers.

--- a/apps/burgers_template.yaml
+++ b/apps/burgers_template.yaml
@@ -1,9 +1,9 @@
 # template for Burgers parameters file
 gp:
-  NINDIVIDUALS: 1000
-  NGEN: 100
-  CXPB: 0.2
-  MUTPB: 0.8
+  NINDIVIDUALS: 1
+  NGEN: 1
+  CXPB: 0.
+  MUTPB: 1
   frac_elitist: 0
   min_: 2
   max_: 5
