--- a/apps/burgers_template.yaml
+++ b/apps/burgers_template.yaml
@@ -1,9 +1,9 @@
 # template for Burgers parameters file
 gp:
-  NINDIVIDUALS: 1
-  NGEN: 1
-  CXPB: 0.
-  MUTPB: 1
+  NINDIVIDUALS: 1000
+  NGEN: 100
+  CXPB: 0.2
+  MUTPB: 0.8
   frac_elitist: 0
   min_: 2
   max_: 5
@@ -11,7 +11,7 @@ gp:
   early_stopping: { "enabled": True, "max_overfit": 10 }
   parsimony_pressure:
     { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
-  penalty: { "method": "length", "reg_param": 0.1}
+  penalty: { "method": "length", "reg_param": 0.01}
   select:
     tournsize: 2
     stochastic_tournament: { "enabled": False, "prob": [0.7, 0.3] }
