--- a/examples/ex1.yaml
+++ b/examples/ex1.yaml
@@ -23,36 +23,19 @@ gp:
   crossover:
     fun: gp.cxOnePoint
     kargs: "{}"
-  primitives: [
-      "Add",
-      "Sub",
-      "MulF",
-      "Div",
-      "AddP0",
-      "AddP1",
-      "AddD0",
-      "AddD1",
-      "SubP0",
-      "SubP1",
-      "SubD0",
-      "SubD1",
-      "dP0",
-      "dD0",
-      # "LapP0",
-      "delP1",
-      "delD1",
-      "St0d1",
-      "St1d1",
-      "InvSt0d1",
-      "InvSt1d1",
-      "MulP0",
-      "MulP1",
-      "MulD0",
-      "MulD1",
-      "InnP0",
-      "InnP1",
-      "InnD0",
-      "InnD1",
+  primitives:
+    [
+      { "name": "AddF", "dimension": None, "rank": None },
+      { "name": "SubF", "dimension": None, "rank": None },
+      { "name": "MulF", "dimension": None, "rank": None },
+      { "name": "Div", "dimension": None, "rank": None },
+      { "name": "AddC", "dimension": ["0", "1"], "rank": ["SC"] },
+      { "name": "SubC", "dimension": ["0", "1"], "rank": ["SC"] },
+      { "name": "cob", "dimension": ["0", "1"], "rank": ["SC"] },
+      { "name": "del", "dimension": ["1"], "rank": ["SC"] },
+      { "name": "St1", "dimension": ["0", "1"], "rank": ["SC"] },
+      { "name": "MF", "dimension": ["0", "1"], "rank": ["SC"] },
+      { "name": "Inn", "dimension": ["0", "1"], "rank": ["SC"] },
     ]
 
 plot:
