Added poisson 1d test for tox.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,11 +20,12 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get -y install libglu1
-        python -m pip install --upgrade pip
+        conda install -n base conda-libmamba-solver
+        conda config --set solver libmamba
         python -m pip install tox-conda
         python -m pip install flake8
     - name: Linting with flake8
       run: |
         flake8
-    # - name: Running tests with tox
-      # run: tox
+    - name: Running tests with tox
+      run: tox
