--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ description = Invoke pytest to run automated tests
 conda_env=environment.yaml
 setenv =
     TOXINIDIR = {toxinidir}
+    CONDA_EXE = 'mamba'
 passenv =
     HOME
     SETUPTOOLS_*
