--- a/environment.yaml
+++ b/environment.yaml
@@ -10,6 +10,7 @@ dependencies:
   - pygmo=2.19.5
   - python
   - python-gmsh
+  - petsc4py
   - jupyterlab
   - trame
   - ipywidgets
@@ -18,10 +19,10 @@ dependencies:
   - pyvista
   - typeguard
   - yaml=0.2.5
+  - pygraphviz
   - pip
   - pip:
     - git+https://github.com/alucantonio/dctkit
     - git+https://github.com/alucantonio/deap
     - ray
     - pygmsh
-    - pygraphviz
