--- a/tests/poisson1d_2.yaml
+++ b/tests/poisson1d_2.yaml
@@ -1,23 +1,21 @@
 gp:
-  NINDIVIDUALS: 100
-  NGEN: 20
+  NINDIVIDUALS: 10
+  NGEN: 10
   CXPB: 0.2
   MUTPB: 0.8
-  frac_elitist: 0
+  frac_elitist: 0.1
   min_: 2
   max_: 5
-  overlapping_generation: True
-  early_stopping: { "enabled": False, "max_overfit": 10 }
-  parsimony_pressure:
-    { "enabled": False, "fitness_first": True, "parsimony_size": 1.5 }
+  overlapping_generation: False
+  early_stopping: { "enabled": True, "max_overfit": 10 }
   penalty: { "method": "length", "reg_param": 0.1 }
   select:
-    tournsize: 2
-    stochastic_tournament: { "enabled": True, "prob": [0.7, 0.3] }
+    tournsize: 3
+    stochastic_tournament: { "enabled": True, "prob": [0.7, 0.2, 0.1] }
   mutate:
-    fun: gp.mixedMutate
-    kargs: "{'expr': toolbox.expr_mut, 'pset': self.pset, 'prob': [0.7, 0.2, 0.1]}" # string is important
-    expr_mut: gp.genHalfAndHalf
+    fun: gp.mutUniform
+    kargs: "{'expr': toolbox.expr_mut, 'pset': self.pset}" # string is important
+    expr_mut: gp.genFull
     expr_mut_kargs: "{'min_': 1, 'max_': 3}"
   crossover:
     fun: gp.cxOnePoint
